# Xerolysis

./: .gitignore  .windsurfrules  README.md  package-lock.json  pyproject.toml  tailwind.config.js
src/: .env.example  db.sqlite3  manage.py
src/apps/obras/: __init__.py
src/apps/obras/docs/: modelos.mmd
src/apps/obras/migrations/: 0001_initial.py  0002_alter_cliente_telefono.py  0003_cliente_notas_alter_cliente_apellidos_and_more.py  0004_alter_cliente_notas.py
src/apps/obras/models/: __init__.py  cliente.py  incidencia.py  material.py  materialobra.py  obra.py  obra_material.py  obra_operario.py  operario.py
src/apps/obras/tests/: test_cliente.py
src/apps/obras/tests/reports/: cliente.md
src/config/: db.sqlite3  urls.py  wsgi.py
src/config/settings/: base.py  dev.py  prod.py  test.py
src/scripts/: generar_test_report.py
src/static/css/: main.css
src/templates/: base.html
